feat: add slug value-object & test config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["./src/**/*.ts"],
+  "include": ["./src/**/*.ts", "*.mjs", ".eslintrc.cjs"],
   "exclude": ["node_modules"]
 }
