--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "typescript-eslint": "^8.5.0",
     "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.0.5"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.13"
   }
 }
