--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^9.0.0",
     "@types/eslint": "^8.56.10",
     "@types/node": "^22.5.4",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
